# knot-cloud-sdk-c

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  knot_cloud.c  knot_cloud.h  knotcloudsdkc.pc.in  log.c  log.h  mq.c  mq.h  parser.c  parser.h
